--- a/FlowerShop/FlowerShop/Base.lproj/Main.storyboard
+++ b/FlowerShop/FlowerShop/Base.lproj/Main.storyboard
@@ -57,8 +57,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zMm-M0-4bQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="k0g-ba-sl2"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-eA-RcP">
+                                <rect key="frame" x="181" y="64" width="52" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.19788099315068494" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Nh-AY-Q7T">
+                                <rect key="frame" x="20" y="314" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95M-K3-u7p">
+                                <rect key="frame" x="20" y="354.5" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gsb-rL-qap">
                                 <rect key="frame" x="30" y="64" width="80" height="40"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.1950984589041096" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="Pse-AL-Ps8"/>
                                     <constraint firstAttribute="height" constant="40" id="ctD-hy-fMa"/>
@@ -74,12 +100,31 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="FWX-Ec-8db" firstAttribute="trailing" secondItem="zMm-M0-4bQ" secondAttribute="trailing" id="0gB-DN-884"/>
+                            <constraint firstItem="FWX-Ec-8db" firstAttribute="trailing" secondItem="95M-K3-u7p" secondAttribute="trailing" constant="20" id="3NE-fZ-HiI"/>
+                            <constraint firstItem="FWX-Ec-8db" firstAttribute="trailing" secondItem="1Nh-AY-Q7T" secondAttribute="trailing" constant="20" id="6NG-1c-ekX"/>
+                            <constraint firstItem="zMm-M0-4bQ" firstAttribute="leading" secondItem="FWX-Ec-8db" secondAttribute="leading" id="CFz-jg-NUT"/>
                             <constraint firstItem="gsb-rL-qap" firstAttribute="leading" secondItem="FWX-Ec-8db" secondAttribute="leading" constant="30" id="OML-6E-SOK"/>
+                            <constraint firstItem="95M-K3-u7p" firstAttribute="leading" secondItem="FWX-Ec-8db" secondAttribute="leading" constant="20" id="Pf3-xs-qRO"/>
+                            <constraint firstItem="bw6-eA-RcP" firstAttribute="centerX" secondItem="fie-ZP-ntt" secondAttribute="centerX" id="Tb9-9f-NZy"/>
+                            <constraint firstItem="1Nh-AY-Q7T" firstAttribute="leading" secondItem="FWX-Ec-8db" secondAttribute="leading" constant="20" id="UaF-KE-MIh"/>
+                            <constraint firstItem="95M-K3-u7p" firstAttribute="top" secondItem="1Nh-AY-Q7T" secondAttribute="bottom" constant="20" id="X6S-2P-etG"/>
+                            <constraint firstItem="1Nh-AY-Q7T" firstAttribute="top" secondItem="zMm-M0-4bQ" secondAttribute="bottom" constant="30" id="f5v-NI-zOk"/>
+                            <constraint firstItem="zMm-M0-4bQ" firstAttribute="top" secondItem="FWX-Ec-8db" secondAttribute="top" id="omq-lq-IQW"/>
                             <constraint firstItem="gsb-rL-qap" firstAttribute="top" secondItem="FWX-Ec-8db" secondAttribute="top" constant="20" id="rh0-tQ-6ZS"/>
+                            <constraint firstItem="bw6-eA-RcP" firstAttribute="height" secondItem="gsb-rL-qap" secondAttribute="height" id="wb7-zk-PS5"/>
+                            <constraint firstItem="bw6-eA-RcP" firstAttribute="centerY" secondItem="gsb-rL-qap" secondAttribute="centerY" id="xri-bE-ost"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="FWX-Ec-8db"/>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="addressLabel" destination="95M-K3-u7p" id="m99-Fn-euL"/>
+                        <outlet property="addresserLabel" destination="1Nh-AY-Q7T" id="bDv-vu-dqg"/>
+                        <outlet property="backButton" destination="gsb-rL-qap" id="0Qh-If-lCc"/>
+                        <outlet property="flowersImageView" destination="zMm-M0-4bQ" id="UBI-mU-r1Y"/>
+                        <outlet property="titleLabel" destination="bw6-eA-RcP" id="40f-uD-GYZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4MB-2N-DJA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
